<resources>
    <string name="app_name">Chore Story</string>
    <string name="i_am_a">I am a</string>
    <string name="parent_guardian">Parent/Guardian</string>
    <string name="child">Child</string>
    <string name="login">Login</string>
    <string name="log_in"> Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_clan">Create new clan</string>
    <string name="join_existing_clan">Join existing clan</string>
    <string name="clan_name">Clan Name</string>
    <string name="add_a_clan_member">Add a clan member</string>
    <string name="new_quest">New Quest</string>
    <string name="select_a_child">Select a child</string>
    <string name="enter_a_quest">Enter a quest</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="verification_required">Verification Required</string>
    <string name="optional">Optional</string>
    <string name="description">Description</string>
    <string name="clan">Clan</string>
    <string name="clan_title">%1$s Clan</string>
    <string name="name">Name</string>
    <string name="members">Members</string>
    <string name="add_a_member">Add a member</string>
    <string name="leave_clan">Leave clan</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="notification_channel_id">notification_channel</string>
    <string name="friends">Friends</string>
    <string name="quests">Quests</string>
    <string name="profile">Profile</string>
    <string name="create">Create</string>
    <string name="overdue_quests">Overdue Quests</string>
    <string name="upcoming_quests">Upcoming Quests</string>
    <string name="pending_quests">Pending Quests</string>
    <string name="completed_quests">Completed Quests</string>
    <string name="quest_details">Quest Details</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="completed">Completed</string>
    <string name="overdue">Overdue</string>
    <string name="upcoming">Upcoming</string>
    <string name="pending">Pending</string>
    <string name="view_proof">View Proof</string>
    <string name="add_proof">Add Proof</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="recurrence">Recurrence</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="stats">Stats</string>
    <string name="level">Level</string>
    <string name="exp">EXP</string>
    <string name="add_a_parent_guardian">Add a parent/Guardian</string>
    <string name="add_a_child">Add a child</string>
    <string name="logout">Log out</string>
    <string name="qr_code">QR Code</string>
    <string name="unable_to_detect_qr_code">Unable to detect QR code</string>
    <string name="unable_to_recognize_speech">Unable to recognize speech</string>
    <string name="debug">debug</string>
    <string name="sign_up_to_join_your_clan">Sign up to join your clan!</string>
    <string name="qid">qid</string>
    <string name="owner_name">owner_name</string>
    <string name="owner_id">owner_id</string>
    <string name="ts">ts</string>
    <string name="all_quests">all_quests</string>
    <string name="welcome_to_the">Welcome to the</string>
    <string name="add_friend">Add Friend</string>
    <string name="log_in_child">Log In Child</string>
    <string name="token_identifier">tokenIdentifier</string>
    <string name="child_login_identifier">:childLogin</string>
    <string name="child_register_identifier">:childRegister</string>
    <string name="complete_quest">Complete Quest</string>
    <string name="parent_register_identifier">:parentRegister</string>
    <string name="creditsTitle">Chore Story Credits</string>
    <string name="creditsButton">Credits</string>
    <string name="credits">Created by: Isabelle Leeson, Cristian David, Mark Tamas Keller, and Zhaozheng (Jim) Wang\n
        Source code available for inspection on:\nhttps://github.com/jimzhaozhengwang/Chore-Story\n
        Icon made by Freepik from www.flaticon.com
    </string>


    <string-array name="recurrence_array">
        <item>Does not repeat</item>
        <item>Repeats daily</item>
        <item>Repeats weekly</item>
        <item>Repeats monthly</item>
        <item>Repeats yearly</item>
    </string-array>
</resources>
