<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chorestory.app.MainActivity">

    <TextView
        android:id="@+id/chore_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textSize="65sp" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/chore_story"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher" /> <!--TODO: upload logo image-->

    <TextView
        android:id="@+id/i_am_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/i_am_a"
        android:textSize="30sp" />

    <!-- TODO: adjust fonts, colors, shapes and dimensions -->
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/i_am_a"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/parent_guardian_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/parent_guardian"
            android:textSize="25sp" />

        <Button
            android:id="@+id/child_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/parent_guardian_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/child"
            android:textSize="25sp" />
    </RelativeLayout>
</RelativeLayout>