<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/child_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/account_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/child_image_view"
            android:text="@string/account"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            />
        <RelativeLayout
            android:id="@+id/account_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_text_view"
            android:background="@color/very_light_blue"
            android:padding="20dp">
            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/child_username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginStart="200dp"
                android:text="isabelle"/>

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_text_view"
                android:text="@string/name"
                android:layout_marginTop="30dp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/child_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_text_view"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="30dp"
                android:text="Isabelle"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/stats_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_section"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/stats"
            android:textSize="30sp"
            android:textColor="@color/black"
            />
        <RelativeLayout
            android:id="@+id/stats_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stats_text_view"
            android:background="@color/very_light_blue"
            android:padding="20dp">
            <TextView
                android:id="@+id/level_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/level"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/child_level_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="200dp"
                android:text="1"/>

            <TextView
                android:id="@+id/exp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/level_text_view"
                android:text="@string/exp"
                android:layout_marginTop="30dp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/child_exp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/level_text_view"
                android:layout_marginStart="200dp"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:text="30"/>
        </RelativeLayout>
        <Button
            android:id="@+id/logout_child_button"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_below="@id/stats_section"
            android:layout_marginTop="30dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/logout"
            android:textSize="25sp"
            android:background="@drawable/btn_round_red"
            />
    </RelativeLayout>
</ScrollView>
