<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/new_quest_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/new_quest"
        android:textSize="40sp" />

    <Spinner
        android:id="@+id/child_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_quest_text_view"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:prompt="@string/select_a_child" />

    <Spinner
        android:id="@+id/quest_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/child_spinner"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:prompt="@string/select_a_quest" />

    <TextView
        android:id="@+id/exp_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quest_spinner"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/exp_text_view"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/select_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/exp_text_view"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/select_date" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_text_view"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/select_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_date_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/select_time" />

    <Spinner
        android:id="@+id/recurrence_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_time_button"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:prompt="@string/does_not_repeat" />

    <TextView
        android:id="@+id/mandatory_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recurrence_spinner"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/mandatory"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/mandatory_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recurrence_spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:checked="false" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mandatory_text_view"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/border"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/create_quest_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center"
            android:layout_margin="15dp"
            android:src="@mipmap/ic_launcher" /> <!-- TODO: change icon -->

    </android.support.design.widget.CoordinatorLayout>

    <!-- TODO: tweak style & layout of this fragment-->
</RelativeLayout>
