<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" >

        <ImageView
            android:id="@+id/avatar_joker"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/joker_color"
            android:layout_marginEnd="5dp"/>

        <ImageView
            android:id="@+id/avatar_knight"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toRightOf="@id/avatar_joker"
            android:src="@drawable/knight_bw"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_up"
        android:textSize="50sp" />

</RelativeLayout>
